# two_arm_collaboration

./: CMakeLists.txt  README.md  Readme.md  package.xml  readme.md
action/: PlaySegment.action  WaitForRing.action
collab_construction_plugin/: CMakeLists.txt  package.xml
collab_env/: CMakeLists.txt  package.xml  readme.md  setup.py  weird_peg.urdf.xacro
collab_env/config/: one_arm_test.rviz  peg1_jtns.rviz  tf.rviz  tf_1arm.rviz  tf_markers.rviz  tf_markers_x4.rviz  tf_peg1.rviz
collab_env/launch/: collab_model_test.launch  create_alternate_pegs.launch  create_pegs.launch  peg_task_oculus.launch  square_test.launch  test7.launch  test7_markers.launch  test7_markers4.launch  test7_pegs.launch  test7_pegs_interactive_tf.launch  test7_square.launch  wam7x1_moveit.launch
collab_env/objects/: construct_square.urdf.xacro  peg.urdf.xacro  weird_peg.urdf.xacro
collab_env/scripts/: run_controllers.py
collab_env/sim/: bhand_arm2_sim.ops  orocos_component_params.launch  wam7_arm2_sim_ik.ops  wam7_planning.launch  wam7_sim.ops  wam7_sim_ik.ops  wam7x1_sim_ik.launch  wam7x2_sim_ik.launch
collab_env/sim/enable/: arm1_enable_ik.ops  arm1_enable_imp.ops  arm1_enable_joint.ops  arm2_enable_ik.ops  arm2_enable_imp.ops  arm2_enable_joint.ops
collab_env/sim/model/: collab.srdf.xacro  collab.urdf.xacro  wam7_sim.urdf.xacro  wam_7dof_arm.srdf.xacro
collab_env/sim/moveit/launch/: move_group.launch
collab_env/sim/moveit/wam/config/: joint_limits.yaml  ompl_planning.yaml
collab_env/sim/moveit/wam/launch/: planning_context.launch
collab_env/sim/moveit/wam2/config/: joint_limits.yaml  ompl_planning.yaml
collab_env/sim/moveit/wam2/launch/: move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml
collab_env/sim/ops/: barrett_sim_manager.ops  controllers.ops  wam7.ops
collab_frame_utils/: CMakeLists.txt  package.xml  setup.py
collab_frame_utils/src/collab_frame_utils/: __init__.py  rotation.py
collab_hydra/: CMakeLists.txt  package.xml
collab_hydra/launch/: pegs1.launch
collab_manager/: CMakeLists.txt  package.xml
collab_manager/launch/: manager.launch
collab_manager/src/collab_manager/: manager.py
collab_msgs/: CMakeLists.txt  package.xml
collab_msgs/action/: StoredAction.action  StoredTask.action
collab_msgs/msg/: BinaryFeatures.msg  Info.msg  SegmentLabel.msg  Step.msg
collab_msgs/srv/: StoredCommand.srv
collab_plugins/: CMakeLists.txt  package.xml  setup.py
collab_plugins/src/collab_plugins/: __init__.py  action_nodes.py  condition_nodes.py
collab_replay/: CMakeLists.txt  package.xml
collab_replay/launch/: list_test.launch  record_markers.launch  record_pegs.launch
collab_replay/scripts/: dmp_request.py  reset.py  tf_to_csv.py
collab_replay/src/: bag2mat.cpp  features.hpp  read.hpp  record.hpp  register_play.cpp  run_record.cpp  test.cpp  transform.hpp
collab_smach/: CMakeLists.txt  package.xml  setup.py  test_planning_scene.sh  test_ring_planning.sh
collab_smach/src/collab_smach/: __init__.py  gripper.py  move_to_frame.py  oro_move_to_frame.py  policy.py  predicator.py  predicator_planning.py  predicator_plans.py  reset_pose.py  sleep.py
collab_spacenav/: CMakeLists.txt  package.xml
collab_spacenav/launch/: spacenav.launch  spacenav_rostopics.launch  test7.launch  test7_markers.launch  test7_markers4.launch  test7_pegs.launch  test7_square.launch  test_tf_tools.launch
collab_spacenav/src/: spacenav_client.cpp  spacenav_tf.cpp
config/: construct_square.rviz  tf_markers_x4.rviz  tf_peg1.rviz  tf_peg1_interactive.rviz  wam_peg_task_oculus.rviz
execution/: task.py
launch/: list_test.launch  peg_task_oculus.launch  pegs1.launch  record_markers.launch  record_pegs.launch  spacenav.launch  spacenav_rostopics.launch  test7.launch  test7_markers.launch  test7_markers4.launch  test7_pegs.launch  test7_pegs_interactive_tf.launch  test7_square.launch  test_tf_tools.launch
markers_demo/: CMakeLists.txt  package.xml
markers_demo/launch/: markers2.launch  markers2_predicator.launch  markers4.launch  markers4_predicator.launch
msg/: Features.msg  Segment.msg
objects/: construct_common.urdf.xacro  construct_square.urdf.xacro  peg.urdf  peg.urdf.xacro  ring.urdf.xacro
peg_assist_demo/: CMakeLists.txt  package.xml
peg_assist_demo/action/: GrabRing.action  WaitForRelease.action
peg_assist_demo/config/: observe_only.rviz  peg1.rviz  peg1_auto.rviz
peg_assist_demo/launch/: bringup_auto_task.launch  bringup_grasp_points.launch  bringup_move_points.launch  bringup_predicator.launch  bringup_rviz.launch  bringup_task.launch  get_dense_binary_features.launch  inverse_drop_peg.launch  iros2014.launch  iros2014_bottom_up.launch  iros2014_top_down.launch  pegs1.launch  pegs1_auto.launch
peg_assist_demo/launch/predicator/: pegs_geometry_predicates.launch  pegs_movement_predicates.launch
peg_assist_demo/points/: drop.yaml
peg_assist_demo/scripts/: convert_to_npz.py  get_dense_binary_features.py  get_smach_info.py  inverse_drop_estimator.py  inverse_drop_publisher.py  iros2014.py  iros2014_bottom_up.py  iros2014_top_down.py  publish_planning_scene.py  setup.py  startup.py  startup_arm1.py  task.py  test_moveit.py
peg_assist_demo/src/peg_assist_demo/: WaitForRing.py
scripts/: dmp_request.py  replay.py  run_controllers.py  run_gazebo.py  startup.py  task.py
sim/: barrett_manager.launch  orocos_component_params.launch  wam7_sim_ik.ops  wam7x1_sim_ik.launch  wam7x2_sim_ik.launch
sim/enable/: arm2_enable_ik.ops
sim/model/: wam.srdf.xacro  wam7_sim.urdf.xacro
sim/moveit/launch/: move_group.launch  planning_context.launch
src/: WaitForRing.py  bag2mat.cpp  features.hpp  plugin.cpp  read.hpp  record.hpp  register_play.cpp  run_record.cpp  spacenav_client.cpp  spacenav_pub.cpp  spacenav_tf.cpp  test.cpp  transform.hpp
src/peg_assist_demo/: ArmCommander.py  WaitForRing.py
