<?xml version="1.0"?>
<package>
  <name>collab_plugins</name>
  <version>0.0.0</version>
  <description>The collab_plugins package</description>

  <maintainer email="chris.paxton.cs@gmail.com">Chris Paxton</maintainer>
  <author email="chris.paxton.cs@gmail.com">Chris Paxton</author>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/collab_plugins</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>beetree</build_depend>
  <build_depend>collab_msgs</build_depend>
  <build_depend>instructor_core</build_depend>
  <build_depend>predicator_core</build_depend>
  <build_depend>predicator_msgs</build_depend>
  <run_depend>beetree</run_depend>
  <run_depend>collab_msgs</run_depend>
  <run_depend>instructor_core</run_depend>
  <run_depend>predicator_core</run_depend>
  <run_depend>predicator_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

    <!-- Beetree Query Plugins -->
    <!--<instructor plugin="collab_plugins.NodeQueryClosestObjectGUI" type="QUERY"
      description="Retrieve identifier for the closest object"
      name="Closest Object Query"/>-->

    <!-- Beetree Condition Plugins -->
    <instructor plugin="collab_plugins.NodeConditionExistsGUI" type="CONDITION"
      description="Test to see if a given entity exists of a certain type"
      name="Entity Exists Condition"/>

    <!-- Queries -->
    <instructor plugin="collab_plugins.NodeSetDestinationGUI" type="QUERY"
      description="Set the destination TF frame for a robot"
      name="Set Destination Frame"/>

    <!-- Actions -->
    <instructor plugin="collab_plugins.NodeMoveToDestinationGUI" type="ACTION"
      description="Move to stored destination"
      name="Move to Destination Action"/>

    <instructor plugin="collab_plugins.NodeOpenGripperGUI" type="ACTION"
      description="Perform a preconfigured open-gripper action"
      name="Open Gripper Action"/>

    <instructor plugin="collab_plugins.NodeCloseGripperGUI" type="ACTION"
      description="Perform a preconfigured close-gripper action"
      name="Close Gripper Action"/>



  </export>
</package>
