<?xml version="1.0"?>
<package>
  <name>peg_assist_demo</name>
  <version>0.0.0</version>
  <description>The peg_assist_demo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cpaxton@todo.todo">cpaxton</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>collab_env</build_depend>
  <build_depend>collab_replay</build_depend>
  <build_depend>collab_spacenav</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_viewer</build_depend>
  <build_depend>dmp_action</build_depend>
  <build_depend>collab_smach</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>collab_env</run_depend>
  <run_depend>collab_replay</run_depend>
  <run_depend>collab_spacenav</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_viewer</run_depend>
  <run_depend>dmp_action</run_depend>
  <run_depend>predicator_core</run_depend>
  <run_depend>predicator_collision</run_depend>
  <run_depend>predicator_msgs</run_depend>
  <run_depend>collab_smach</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
